# rasp-water

./: .coveragerc  .dockerignore  .eslintrc.json  .gitignore  .gitlab-ci-renovate-schedule.yml  .gitlab-ci.yml  .pre-commit-config.yaml  .pyproject.toml.orig  CLAUDE.md  Dockerfile  README.md  a.py  angular.json  basic_test_time.txt  compose.yaml  config.example.yaml  config.schema  config.yaml  conftest.py  cypress.config.js  daemon.json  eslint.config.js  index.html  karma.conf.js  package-lock.json  package.json  play_test_time.txt  pyproject.toml  renovate.json  requirements.txt  t.py  test_optimization_analysis.md  tsconfig.app.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yaml  regression.yaml
cypress/e2e/: basic_spec.cy.js
cypress/integration/: spec.ts
e2e/src/: app.e2e-spec.ts
flask/: app.py  forecast_check.py  rain_check.py  rasp_water.py  soilwet_check.py
flask/app/: app.py
flask/lib/: app_scheduler.py  config.py  flask_util.py  footprint.py  forecast_check.py  logger.py  notify_slack.py  rasp_water.py  rasp_water_config.py  rasp_water_event.py  rasp_water_log.py  rasp_water_schedule.py  rasp_water_util.py  rasp_water_valve.py  scheduler.py  soilwet_check.py  valve.py  weather_forecast.py  weather_sensor.py  webapp_base.py  webapp_config.py  webapp_event.py  webapp_log.py  webapp_util.py
flask/lib/tests/evidence/: index.htm
flask/src/: app.py  healthz.py
flask/src/flask/data/: log.db
flask/src/flask/data/liveness/: flow_notify  scheduler  valve_control
flask/src/rasp_water/: app_scheduler.py  rasp_water_schedule.py  scheduler.py  valve.py  weather_forecast.py  weather_sensor.py  webapp_schedule.py  webapp_valve.py
flask/src/rasp_water/api/test/: time.py
flask/src/rasp_water/control/: scheduler.py  valve.py  weather_sensor.py
flask/src/rasp_water/control/webapi/: schedule.py  valve.py
flask/src/rasp_water/control/webapi/test/: time.py
flask/src/rasp_water/metrics/: __init__.py  collector.py
flask/src/rasp_water/metrics/webapi/: __init__.py  page.py
flask/src/rasp_water/webapi/: valve.py
flask/src/rasp_water/webapi/test/: time.py
kubernetes/: rasp-water.yml
script/: sync_overlay.zsh  water_ctrl.py
src/: build.ts  index.html  main.ts  styles.scss  tsconfig.app.json  tsconfig.spec.json  tslint.json
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
src/app/footer/: footer.component.html  footer.component.scss  footer.component.ts
src/app/header/: header.component.html  header.component.scss  header.component.ts
src/app/log/: log.component.html  log.component.scss  log.component.spec.ts  log.component.ts
src/app/scheduler/: scheduler.module.ts
src/app/scheduler/scheduler-control/: scheduler-control.component.html  scheduler-control.component.spec.ts  scheduler-control.component.ts
src/app/scheduler/scheduler-entry/: scheduler-entry.component.html  scheduler-entry.component.scss  scheduler-entry.component.spec.ts  scheduler-entry.component.ts
src/app/service/: push.service.spec.ts  push.service.ts  toast.service.ts
src/app/toast/: toast.component.html  toast.component.ts
src/app/valve-control/: valve-control.component.html  valve-control.component.spec.ts  valve-control.component.ts
src/assets/: manifest.json
test/: conftest.py  test_basic.py  test_flask.py
tests/: conftest.py  test_basic.py  test_playwright.py
trash/: tsconfig.node.json
