[project]
name = "rasp-water"
version = "0.1.0"
description = "Raspberry Pi を使って自動的に水やりをするシステムです。"
authors = [
    { name = "KIMATA Tetsuya", email = "kimata@green-rabbit.net" }
]
readme = "README.md"
requires-python = ">= 3.10"

dependencies = [
    "docopt-ng>=0.10.0",
    "flask-cors>=5.0.0",
    "flask>=3.1.0",
    "fluent-logger>=0.12.0",
    "influxdb-client[ciso]>=1.47.0",
    "slack-sdk>=3.35.0",
    "rpi-lgpio>=0.7",
    "schedule>=1.2.2",
    "my-lib @ git+https://github.com/kimata/my-py-lib@c32e04623cb2b3be3352152ac9951114f9c4b391",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "flaky>=3.8.1",
    "playwright>=1.49.0",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.14.0",
    "pytest-playwright>=0.6.2",
    "pytest-xdist>=3.6.1",
    "time-machine>=2.16.0",
    "pytest>=8.3.4",
    "pytest-timeout>=2.4.2",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["flask/src/rasp_water"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
minversion = "6.0"

addopts = "--verbose --timeout=300 --durations=10 --log-file-level=DEBUG --log-format=\"%(asctime)s %(levelname)s %(message)s\" --log-format=\"%(asctime)s %(levelname)s [%(filename)s:%(lineno)s %(funcName)s] %(message)s\" --capture=sys --html=tests/evidence/index.htm --self-contained-html --cov=flask --cov-report=html"


testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning",
    "ignore::DeprecationWarning:multiprocessing\\.popen_fork"
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",

  # 以下、未使用関数
]

[tool.coverage.html]
directory = "tests/evidence/coverage"
